<resources>
    <string name="app_name" translatable="false">MyNews</string>
    <string name="action_settings">Settings</string>
    <string name="article_url_key" translatable="false">articleUrl</string>
    <string name="news">News</string>
    <string name="settings">Settings</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="about">About</string>
    <string name="menu_group_main">Main</string>
    <string name="menu_group_settings_and_features">Settings and Features</string>
    <string name="mynews_logo" translatable="false">MyNews logo</string>
    <string name="pref_key_dark_theme" translatable="false">dark_theme</string>
    <string name="pref_key_show_bottom_navigation" translatable="false">show_bottom_navigation</string>
    <string name="db_name" translatable="false">database</string>

    <!--    Tab Titles-->
    <string name="title_politics">politics</string>
    <string name="title_economics">economics</string>
    <string name="title_society">society</string>
    <string name="title_sport">sport</string>
    <string name="title_culture">culture</string>
    <string name="title_crime">crime</string>
    <string name="title_it">it</string>
    <string name="title_science">science</string>
    <string name="title_celebrity">celebrity</string>
    <string name="title_travel">travel</string>
    <string name="title_news">news</string>

    <string name="action_search">Search</string>
    <string name="not_found">Not found</string>
    <string name="press_to_update">Press to update</string>

    <string name="loading_news">Loading&#8230;</string>

    <string name="time_hour">hour</string>
    <string name="time_hours_2_4">hours</string>
    <string name="time_hours_5_0">hours</string>
    <string name="time_ago">ago</string>
</resources>
