<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.mihassu.mynews.ui.MainActivity">
    <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_main"
                        android:icon="@drawable/icon_paper"
                        android:title="@string/news" />
                    <item
                        android:id="@+id/nav_bookmarks"
                        android:icon="@drawable/ic_bookmark_border_black_24dp"
                        android:title="@string/bookmarks" />

                    <item
                        android:id="@+id/nav_settings"
                        android:icon="@drawable/ic_settings_black_24dp"
                        android:title="@string/settings" />
                    <item
                        android:id="@+id/nav_about"
                        android:icon="@drawable/icon_info"
                        android:title="@string/about" />
                </group>

</menu>
